<resources>
    <string name="app_name">SelfSecurity</string>

    <string name="welcome_title">Welcome \n To \n Safe App</string>
    <string name="btn_started">Get Started</string>
    <string name="main_title">Main Menu</string>
    <string name="personal_information">Personal Information</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="panic">Panic</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="first_aid_title">First Aid Instructions</string>
    <string name="first_aid_instructions">1. If you\'re dealing with smaller cuts and scrapes where blood is flowing, the first order of

business is to clean the wound.\n\n

    2. Wash it off with any clean water source you have available. Next, you\'ll want something to

soft and absorbent to place on the wound. Apply direct pressure on the cut or wound with a clean

cloth, tissue, or piece of gauze until bleeding stops.\n\n

    3. Paper towels and napkins can do, as well as strips of clothing if they\'re clean.\n\n

    4. If the wound is on the arm or leg, raise limb above the heart, if possible, to help slow bleeding.\n\n

    5. Once you\'ve found a good absorption pad, you can use any form of tape to adhere the pad to

the wound. If you don\'t have any tape, tie a piece of cloth tightly around the wound. Be careful

not to cut off circulation, or make the knot too tight.\n\n

6. For larger wounds, you\'ll want to skip cleaning the wound, as it\'s more important to stem the

loss of blood, rather than preventing infection (though both are important). With heavy blood

loss, keep the wound elevated above the heart to slow down the flow, apply an absorption pad or

your hands if nothing is available directly to the wound, and use pressure points to slow the flow

of blood.\n\n</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="name">Name :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="address">Address :</string>
    <string name="number">Number :</string>
    <string name="occupation">Occupation</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="setEmgNumber">Set Emergency Number</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="add_from_contacts">Add From Contacts</string>
    <string name="add_new_contacts">Add New Contacts</string>
    <string name="saved_contact">Saved Contact List</string>
    <string name="add_another_contact">Add Another Contact</string>
    <string name="contacts">Contacts</string>
    <string name="delete_info">Delete Selected No :</string>
    <string name="delete">Delete</string>
    <string name="cancele">Cancel</string>
    <string name="app">App</string>
    <string name="alert_message_setting">Alert Message Setting</string>
    <string name="alert_timer_setting">Alert Timer Setting</string>
    <string name="message">Message :</string>
    <string name="msg_max">( Max 160 Char)</string>
    <string name="alert_message_title">Send Alert Message \nFor Every </string>
    <string name="min">M</string>

</resources>
