<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activitys.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/btn_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/personal_information"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_emergency_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/emergency_contacts"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_emergency_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/emergency_call"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_panic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/panic"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_first_aid_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/first_aid_title"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/settings"
            android:background="@drawable/btn_background"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/exit"
            android:background="@drawable/btn_background"/>
    </LinearLayout>


</LinearLayout>
