<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tutorialandroid.selfsecurity.activitys.EmergencyContactsActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_background"
        android:text="@string/back"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_back"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_add_from_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_background"
            android:text="@string/add_from_contacts"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_add_new_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_background"
            android:text="@string/add_new_contacts"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_saved_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_background"
            android:text="@string/saved_contact"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
