<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tutorialandroid.selfsecurity.activitys.EditContactsActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"/>
    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btn_back">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_info"
            android:gravity="center"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
           <Button
               android:id="@+id/btn_delete"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/delete"
               android:background="@drawable/btn_background"
               android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancele"
                android:background="@drawable/btn_background"
                android:layout_marginLeft="50dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
