<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorialandroid.selfsecurity.activitys.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app" />

            <Switch
                android:id="@+id/swichbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_alert_msg_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_background"
            android:text="@string/alert_message_setting"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_alert_timer_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_background"
            android:text="@string/alert_timer_setting"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_background"
        android:text="@string/back"
        android:textColor="@color/white" />
</RelativeLayout>
