<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tutorialandroid.selfsecurity.activitys.PanicActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_background"
        android:text="@string/back"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btn_red_panic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:text="@string/start"
        android:textSize="25sp"
        android:background="@drawable/btn_red_background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_red_panic"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_panic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/panic"
            android:textColor="@color/white"

            />
    </LinearLayout>
</RelativeLayout>
