<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorialandroid.selfsecurity.activitys.FirstAidInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/txt_first_aid_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_back"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/first_aid_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_first_aid_title"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:gravity="center|left"
        android:textSize="16sp"
        android:text="@string/first_aid_instructions"/>
    </RelativeLayout>
</ScrollView>
