<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tutorialandroid.selfsecurity.activitys.AddFromContactsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.tutorialandroid.selfsecurity.activitys.AddNewContactsActivity">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/btn_background"
                android:text="@string/back"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/btn_background"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_back"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/edit_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rounded_gray_edittext"
                    android:gravity="top|left"
                    android:lines="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="@string/msg_max"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_layout"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_background"
                android:text="@string/save"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>