<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tutorialandroid.selfsecurity.activitys.AddFromContactsActivity">
    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_back"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="0.7"
                android:textSize="18sp"
                android:text="@string/name"/>

            <auto.ContactsCompletionView
                android:id="@+id/actv_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_gray_edittext"
                android:text=""
                android:layout_weight="0.3"
                android:paddingLeft="5dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_back"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="0.7"
                    android:textSize="18sp"
                    android:text="@string/number"/>

                <EditText
                    android:id="@+id/edt_number"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/rounded_gray_edittext"
                    android:text=""
                    android:layout_weight="0.3"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add_another_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/add_another_contact"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/save"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
